--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>io.github.cdimascio</groupId>
+      <artifactId>java-dotenv</artifactId>
+      <version>5.1.3</version>
+    </dependency>
   </dependencies>
 
   <build>
