--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
       <version>4.0.1</version>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>42.2.8</version>
+  </dependency>
   </dependencies>
 
   <build>
