--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
     <artifactId>postgresql</artifactId>
     <version>42.2.8</version>
   </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mindrot.bcrypt/bcrypt -->
+    <dependency>
+      <groupId>org.mindrot</groupId>
+      <artifactId>jbcrypt</artifactId>
+      <version>0.4</version>
+    </dependency>
   </dependencies>
 
   <build>
