--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -45,13 +45,12 @@
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>Admin</servlet-name>
-        <servlet-class>com.bankeschon.Servlet.Admin</servlet-class>
+        <servlet-name>Stat</servlet-name>
+        <servlet-class>com.bankeschon.Servlet.Stat</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>Admin</servlet-name>
-        <url-pattern>/admin</url-pattern>
+        <servlet-name>Stat</servlet-name>
+        <url-pattern>/stati</url-pattern>
     </servlet-mapping>
-
 </web-app>
