--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -45,7 +45,6 @@
     </servlet-mapping>
 
     <servlet>
-
         <servlet-name>Stat</servlet-name>
         <servlet-class>com.bankeschon.Servlet.Stat</servlet-class>
     </servlet>
@@ -53,7 +52,9 @@
     <servlet-mapping>
         <servlet-name>Stat</servlet-name>
         <url-pattern>/stati</url-pattern>
+    </servlet-mapping>
 
+    <servlet>
         <servlet-name>Produit</servlet-name>
         <servlet-class>com.bankeschon.Servlet.Produit</servlet-class>
     </servlet>
